added css styles

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <title>DELANI STUDIO</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<img src="./assets/logo/logo.png" alt="logo" />
-<h1>WELCOME</h1>
-<h1>TO DELAN STUDIO</h1>
-<H6>amazing people are making amazing designs in a fun environment</H6>
-<br>
-<img src="./assets/mouse_click.png" alt="logo" />
+<div>
+    <img class="logo" src="./assets/logo/logo.png" alt="logo" />
+    <h1>WELCOME</h1>
+    <h1>TO DELAN STUDIO</h1>
+    <H6>amazing people are making amazing designs in a fun environment</H6>
+    <br>
+    <img class="logo" src="./assets/mouse_click.png" alt="logo" />
+</div>
 <body>
     <h1>ABOUT US</h1>
     <P>When you work with us, you are part of a team of committed collaborators. All aspects of our Software development process are integrated, interactive and agile. <br> Our approach unifies design, development and product management to create exceptional products.</P>
