changed text color of h1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img class="logo" src="./assets/logo/logo.png" alt="logo" />
     <h1>WELCOME</h1>
     <h1>TO DELAN STUDIO</h1>
-    <H6>amazing people are making amazing designs in a fun environment</H6>
+    <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
     <br>
     <img class="logo" src="./assets/mouse_click.png" alt="logo" />
 </div>
