centre alligned h2 heading

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <div>
-    <img class="logo" src="./assets/logo/logo.png" alt="logo" />
+    <img class="logo" src="./assets/logo/logo.png" alt="logo" /><br>
     <h1>WELCOME</h1>
     <h1>TO DELAN STUDIO</h1>
     <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
-    <br>
-    <img class="logo" src="./assets/mouse_click.png" alt="logo" />
+    <br><br><br>
+    <img class="mouse" src="./assets/mouse_click.png" alt="logo" />
 </div>
 <body>
-    <h1>ABOUT US</h1>
+    <h2>ABOUT US</h2>
     <P>When you work with us, you are part of a team of committed collaborators. All aspects of our Software development process are integrated, interactive and agile. <br> Our approach unifies design, development and product management to create exceptional products.</P>
     
 </body>
