--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
     <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
     <br><br><br>
     <img class="mouse" src="./assets/mouse_click.png" alt="logo" />
+    <br>
 </div>
+<br><br>
 <body>
     <h2>ABOUT US</h2>
-    <P>When you work with us, you are part of a team of committed collaborators. All aspects of our Software development process are integrated, interactive and agile. <br> Our approach unifies design, development and product management to create exceptional products.</P>
+    <P class="a">When you work with us, you are part of a team of committed collaborators. All aspects of our Software development process are integrated, interactive and agile. </P><br> 
+    <p>Our approach unifies design, development and product management to create exceptional products.</p> 
+    <p>We start each project by understanding your business goals, ther user's need and the product requirements</p>
+    <p>Then we help translate them into effective and elegant solutions.</p>
     
 </body>
 </html>
