added style to paragraph

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <body>
     <h2>ABOUT US</h2>
     <P class="a">When you work with us, you are part of a team of committed collaborators. All aspects of our Software development process are integrated, interactive and agile. </P><br> 
-    <p>Our approach unifies design, development and product management to create exceptional products.</p> 
-    <p>We start each project by understanding your business goals, ther user's need and the product requirements</p>
-    <p>Then we help translate them into effective and elegant solutions.</p>
+    <p class="a">Our approach unifies design, development and product management to create exceptional products.</p> 
+    <p class="a">We start each project by understanding your business goals, ther user's need and the product requirements</p>
+    <p class="a">Then we help translate them into effective and elegant solutions.</p>
     
 </body>
 </html>
