added class container

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>DELANI STUDIO</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<div>
+<div class="heading">
     <img class="logo" src="./assets/logo/logo.png" alt="logo" /><br>
     <h1>WELCOME</h1>
     <h1>TO DELAN STUDIO</h1>
@@ -19,11 +19,12 @@
 </div>
 <br><br>
 <body>
-    <h2>ABOUT US</h2>
-    <P class="a">When you work with us, you are part of a team of committed collaborators. All aspects of our Software development process are integrated, interactive and agile. </P><br> 
-    <p class="a">Our approach unifies design, development and product management to create exceptional products.</p> 
-    <p class="a">We start each project by understanding your business goals, ther user's need and the product requirements</p>
-    <p class="a">Then we help translate them into effective and elegant solutions.</p>
-    
+    <div class="container">
+        <h2>ABOUT US</h2>
+        <P class="a">When you work with us, you are part of a team of committed collaborators. All aspects of our Software development process are integrated, interactive and agile. </P><br> 
+        <p class="a">Our approach unifies design, development and product management to create exceptional products.</p> 
+        <p class="a">We start each project by understanding your business goals, ther user's need and the product requirements</p>
+        <p class="a">Then we help translate them into effective and elegant solutions.</p>
+    </div>
 </body>
 </html>
