added background image for services

--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
         <p class="a">We start each project by understanding your business goals, ther user's need and the product requirements</p>
         <p class="a">Then we help translate them into effective and elegant solutions.</p>
     </div>
+    <div class="serv">
+        <br><br>
+        <h1>SERVICES</h1>
+        <P class="a" id="servi">Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision</P>
+        <p class="a" id="servi">The outcome of this scoping session is proposal or high-level statement of work. <br> based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+        <br><br><br>
+
+    </div>
 </body>
 </html>
