--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
         <P class="a">When you work with us, you are part of a team of committed collaborators. All aspects of our Software development process are integrated, interactive and agile. </P><br> 
         <p class="a">Our approach unifies design, development and product management to create exceptional products.</p> 
         <p class="a">We start each project by understanding your business goals, ther user's need and the product requirements</p>
-        <p class="a">Then we help translate them into effective and elegant solutions.</p>
-    </div>
-    <div class="serv">
-        <br><br>
-        <h1>SERVICES</h1>
-        <P class="a" id="servi">Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision</P>
-        <p class="a" id="servi">The outcome of this scoping session is proposal or high-level statement of work. <br> based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+        <p class="a">Then we help translate them into effective and elegant solutions.</p><br><br>
+    
+        <div class="serv">
+            <br><br><br>
+            <h1>SERVICES</h1>
+            <P id="servi">Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision</P>
+            <p id="servi">The outcome of this scoping session is proposal or high-level statement of work. <br> based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+            <br><br><br>
+        </div>
         <br><br><br>
-
+        <h2>WHAT WE DO</h2>
     </div>
 </body>
 </html>
