--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <div class="heading">
-    <img class="logo" src="./assets/logo/logo.png" alt="logo" /><br>
+    <img class="logo" class="img-fluid" src="./assets/logo/logo.png" alt="logo" /><br>
     <h1>WELCOME</h1>
     <h1>TO DELAN STUDIO</h1>
     <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
     <br><br><br>
-    <img class="mouse" src="./assets/mouse_click.png" alt="logo" />
+    <img class="mouse" class="img-fluid" src="./assets/mouse_click.png" alt="logo" />
     <br>
 </div>
 <br><br>
@@ -26,15 +26,41 @@
         <p class="a">We start each project by understanding your business goals, ther user's need and the product requirements</p>
         <p class="a">Then we help translate them into effective and elegant solutions.</p><br><br>
     
-        <div class="serv">
-            <br><br><br>
-            <h1>SERVICES</h1>
+    <div class="serv">
+        <br><br><br>
+        <h1>SERVICES</h1>
             <P id="servi">Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision</P>
             <p id="servi">The outcome of this scoping session is proposal or high-level statement of work. <br> based on your requirements, we can provide a complete offering or just the pieces you need.</p>
-            <br><br><br>
-        </div>
         <br><br><br>
-        <h2>WHAT WE DO</h2>
     </div>
+        <br><br><br>
+<h2 class="text-center">WHAT WE DO</h2>
+<div class="row row-cols-3 g-4">
+    <div class="col-sm-6 col-md-4">
+        <div class="card mb-3" style="width: 18rem;">            
+            <div class="card-body">
+                <img src="./assets/services_icons/design_icon.png" alt="design_icon">
+                <h5 class="card-title">Design</h5>             
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="card mb-3" style="width: 18rem;">            
+            <div class="card-body">
+                <img src="./assets/services_icons/dev_icon.png" alt="dev_icon">
+                <h5 class="card-title">Development</h5>             
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="card mb-3" style="width: 18rem;">            
+            <div class="card-body">
+                <img src="./assets/services_icons/product_icon.png" alt="product_icon">
+                <h5 class="card-title">Product</h5>             
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
