--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>DELANI STUDIO</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <div class="heading">
-    <img class="logo" class="img-fluid" src="./assets/logo/logo.png" alt="logo" /><br>
+    <img class="logo" class="img-fluid" src="./assets/logo/logo.png" alt="logo"/><br>
     <h1>WELCOME</h1>
     <h1>TO DELAN STUDIO</h1>
     <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
@@ -21,10 +23,10 @@
 <body>
     <div class="container">
         <h2>ABOUT US</h2>
-        <P class="a">When you work with us, you are part of a team of committed collaborators. All aspects of our Software development process are integrated, interactive and agile. </P><br> 
-        <p class="a">Our approach unifies design, development and product management to create exceptional products.</p> 
-        <p class="a">We start each project by understanding your business goals, ther user's need and the product requirements</p>
-        <p class="a">Then we help translate them into effective and elegant solutions.</p><br><br>
+            <P class="a">When you work with us, you are part of a team of committed collaborators. All aspects of our Software development process are integrated, interactive and agile. </P><br> 
+            <p class="a">Our approach unifies design, development and product management to create exceptional products.</p> 
+            <p class="a">We start each project by understanding your business goals, ther user's need and the product requirements</p>
+            <p class="a">Then we help translate them into effective and elegant solutions.</p><br><br>           
     
     <div class="serv">
         <br><br><br>
@@ -33,8 +35,8 @@
             <p id="servi">The outcome of this scoping session is proposal or high-level statement of work. <br> based on your requirements, we can provide a complete offering or just the pieces you need.</p>
         <br><br><br>
     </div>
-        <br><br><br>
-<h2 class="text-center">WHAT WE DO</h2>
+<br><br><br>
+<h2 class="text-center">WHAT WE DO</h2><br>
 <div class="row row-cols-3 g-4">
     <div class="col-sm-6 col-md-4">
         <div class="card mb-3" style="width: 18rem;">            
@@ -61,6 +63,8 @@
         </div>
     </div>
 </div>
+<br><br>
+<h2 class="text-center">PORTIFOLIO</h2>
 
 </body>
 </html>
