added portfolio cards

--- a/index.html
+++ b/index.html
@@ -65,6 +65,35 @@
 </div>
 <br><br>
 <h2 class="text-center">PORTIFOLIO</h2>
+<br>
+<div class="container">
+    <div class="row row-cols-3 g-4">
+        <div class="col-sm-3">
+            <img src="./assets/portfolio/work4.jpg" alt="" style="width:100%">
+        </div>
+        <div class="col-sm-3">
+            <img src="./assets/portfolio/work3.jpg" alt="" style="width:100%">
+        </div>
+        <div class="col-sm-3">
+            <img src="./assets/portfolio/work2.jpg" alt=""style="width:100%">
+        </div>
+        <div class="col-sm-3">
+            <img src="./assets/portfolio/work1.jpg" alt="" style="width:100%">
+        </div>
+        <div class="col-sm-3">
+            <img src="./assets/portfolio/work5.jpg" alt="" style="width:100%">
+        </div>
+        <div class="col-sm-3">
+            <img src="./assets/portfolio/work6.jpg" alt="" style="width:100%">
+        </div>
+        <div class="col-sm-3">
+            <img src="./assets/portfolio/work7.jpg" alt="" style="width:100%">
+        </div>
+        <div class="col-sm-3">
+            <img src="./assets/portfolio/work8.jpg" alt="" style="width:100%">
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
