added contact us Form

--- a/index.html
+++ b/index.html
@@ -94,6 +94,24 @@
         </div>
     </div>
 </div>
+<br><br>
+<div class="contactus" >
+<h2 class="text-center">CONTACT US</h2><br>
+<form>
+    <div class="row">
+      <div class="col-4">
+        <input type="text" class="form-control" placeholder="Name...">
+      </div>
+      <div class="col-4">
+        <input type="email" class="form-control" placeholder="Email...">
+      </div>
+    </div>
+    <br><br>
+    <textarea id="story" name="story" rows="10" cols="70" placeholder="Your message here..."></textarea>       
+    
+  </form>
+</div>
+<br><br>
 
 </body>
 </html>
