added social media icons

--- a/index.html
+++ b/index.html
@@ -112,6 +112,35 @@
   </form>
 </div>
 <br><br>
+<div class="row-s">
+    <div class="column-s">
+        <img src="./assets/social_icons/flickr.png" alt="flickr">
+    </div>
+    <div class="column-s">
+        <img src="./assets/social_icons/pinterest.png" alt="pinterest">
+    </div>
+    <div class="column-s">
+        <img src="./assets/social_icons/behance.png" alt="behance">
+    </div>
+    <div class="column-s">
+        <img src="./assets/social_icons/stumble_upon.png" alt="stumble_upon">
+    </div>
+    <div class="column-s">
+        <img src="./assets/social_icons/skype.png" alt="skype">
+    </div>
+    <div class="column-s">
+        <img src="./assets/social_icons/g_plus.png" alt="g_plus">
+    </div>
+    <div class="column-s">
+        <img src="./assets/social_icons/facebook.png" alt="facebook">
+    </div>
+    <div class="column-s">
+        <img src="./assets/social_icons/dribble.png" alt="dribble">
+    </div>
+    <div class="column-s">
+        <img src="./assets/social_icons/twitter.png" alt="twitter">
+    </div>
+  </div>
 
 </body>
 </html>
