--- a/index.html
+++ b/index.html
@@ -89,27 +89,31 @@
         <div class="col-sm-3">
             <img src="./assets/portfolio/work7.jpg" alt="" style="width:100%">
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3">            
             <img src="./assets/portfolio/work8.jpg" alt="" style="width:100%">
+            <div class="text-block">
+                <h4 class="card-title">BAILEY <br>WONGER</br></h4>
+            </div>        
         </div>
     </div>
 </div>
 <br><br>
-<div class="contactus" >
+<div class="contactus" >    
 <h2 class="text-center">CONTACT US</h2><br>
+<div class="center">
 <form>
     <div class="row">
       <div class="col-4">
-        <input type="text" class="form-control" placeholder="Name...">
+        <input type="text" class="form-control"  placeholder="Name...">
       </div>
       <div class="col-4">
         <input type="email" class="form-control" placeholder="Email...">
       </div>
     </div>
     <br><br>
-    <textarea id="story" name="story" rows="10" cols="70" placeholder="Your message here..."></textarea>       
-    
-  </form>
+    <textarea id="story"  name="story" rows="10" cols="80" placeholder="Your message here..."></textarea>
+</form>
+</div>
 </div>
 <br><br>
 <div class="row-s">
@@ -141,6 +145,11 @@
         <img src="./assets/social_icons/twitter.png" alt="twitter">
     </div>
   </div>
-
+<script src="https://code.jquery.com/jquery-3.6.4.js"></script>
+<script src="js/scripts.js"></script>
 </body>
+<footer>
+    <p>DELANI STUDIO<br>
+    2019</p>
+</footer>
 </html>
