added hover effect on portfolio section

--- a/index.html
+++ b/index.html
@@ -68,32 +68,29 @@
 <br>
 <div class="container">
     <div class="row row-cols-3 g-4">
-        <div class="col-sm-3">
+        <div id="portfolio1" class="col-sm-3">
             <img src="./assets/portfolio/work4.jpg" alt="" style="width:100%">
         </div>
-        <div class="col-sm-3">
+        <div id="portfolio2" class="col-sm-3">
             <img src="./assets/portfolio/work3.jpg" alt="" style="width:100%">
         </div>
-        <div class="col-sm-3">
+        <div id="portfolio3" class="col-sm-3">
             <img src="./assets/portfolio/work2.jpg" alt=""style="width:100%">
         </div>
-        <div class="col-sm-3">
+        <div id="portfolio4" class="col-sm-3">
             <img src="./assets/portfolio/work1.jpg" alt="" style="width:100%">
         </div>
-        <div class="col-sm-3">
+        <div id="portfolio5" class="col-sm-3">
             <img src="./assets/portfolio/work5.jpg" alt="" style="width:100%">
         </div>
-        <div class="col-sm-3">
+        <div id="portfolio6" class="col-sm-3">
             <img src="./assets/portfolio/work6.jpg" alt="" style="width:100%">
         </div>
-        <div class="col-sm-3">
+        <div id="portfolio7" class="col-sm-3">
             <img src="./assets/portfolio/work7.jpg" alt="" style="width:100%">
         </div>
-        <div class="col-sm-3">            
+        <div id="portfolio8" class="col-sm-3">            
             <img src="./assets/portfolio/work8.jpg" alt="" style="width:100%">
-            <div class="text-block">
-                <h4 class="card-title">BAILEY <br>WONGER</br></h4>
-            </div>        
         </div>
     </div>
 </div>
