made the form transaparent

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <br><br><br>
 <h2 class="text-center">WHAT WE DO</h2><br>
 <div class="row row-cols-3 g-4">
-    <div class="col-sm-6 col-md-4">
+    <div id="design" class="col-sm-6 col-md-4">
         <div class="card mb-3" style="width: 18rem;">            
             <div class="card-body">
                 <img src="./assets/services_icons/design_icon.png" alt="design_icon">
@@ -95,7 +95,7 @@
     </div>
 </div>
 <br><br>
-<div class="contactus" >    
+<div class=fa fa-lock id="contactus" >    
 <h2 class="text-center">CONTACT US</h2><br>
 <div class="center">
 <form>
