Added submit button

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     </div>
     <br><br>
     <textarea id="story"  name="story" rows="10" cols="80" placeholder="Your message here..."></textarea>
+    <button type="submit" class="btn btn-primary col-md-1">Submit</button>
 </form>
 </div>
 </div>
