indented the code

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             <p id="servi">The outcome of this scoping session is proposal or high-level statement of work. <br> based on your requirements, we can provide a complete offering or just the pieces you need.</p>
         <br><br><br>
     </div>
-<br><br><br>
+    <br><br>
 <div class="container-what-we-do">
     <h1 id="what-we-do-h1">
         WHAT WE DO
-    </h1><br/><br/>
+    </h1>    
     <div class="row">
         <div class="col-md-4">
             <div id="col-md-4-1">
@@ -71,7 +71,6 @@
         </div>
     </div>    
 </div>
-<br><br>
 <h2 class="text-center">PORTIFOLIO</h2>
 <br>
 <div class="container">
@@ -103,7 +102,7 @@
     </div>
 </div>
 <br><br>
-<div class=fa fa-lock id="contactus" >    
+<div id="contactus" >    
 <h3 class="text-center">CONTACT US</h3><br>
 <div class="center">
 <form>
