--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <title>DELANI STUDIO</title>
 </head>
+<div class="container-fluid">
 <div class="heading">
     <img class="logo" class="img-fluid" src="./assets/logo/logo.png" alt="logo"/><br>
-    <h1>WELCOME</h1>
-    <h1>TO DELAN STUDIO</h1>
+    <h1>WELCOME <br><br>TO DELAN STUDIO</h1>
     <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
     <br><br><br>
     <img class="mouse" class="img-fluid" src="./assets/mouse_click.png" alt="logo" />
@@ -22,12 +22,11 @@
 </div>
 <br><br>
 <body>
-    <div class="container-fluid">
-        <h2>ABOUT US</h2>
-            <P class="a">When you work with us, you are part of a team of committed collaborators. All aspects of our Software development process are integrated, interactive and agile. </P><br> 
-            <p class="a">Our approach unifies design, development and product management to create exceptional products.</p> 
-            <p class="a">We start each project by understanding your business goals, ther user's need and the product requirements</p>
-            <p class="a">Then we help translate them into effective and elegant solutions.</p><br><br>           
+     <h2>ABOUT US</h2>
+        <P class="a">When you work with us, you are part of a team of committed collaborators. All aspects of our Software development process are integrated, interactive and agile. </P><br> 
+        <p class="a">Our approach unifies design, development and product management to create exceptional products.</p> 
+        <p class="a">We start each project by understanding your business goals, ther user's need and the product requirements</p>
+        <p class="a">Then we help translate them into effective and elegant solutions.</p><br><br>           
     
     <div class="serv">
         <br><br><br>
@@ -109,10 +108,10 @@
 <form>
     <div class="row">
       <div class="col-6">
-        <input type="text" class="form-control"  placeholder="Name...">
+        <input type="text" id="username" class="form-control"  placeholder="Name...">
       </div>
       <div class="col-6">
-        <input type="email" class="form-control" placeholder="Email...">
+        <input type="email" id="email" class="form-control" placeholder="Email...">
       </div>
     </div>
     <br><br>
@@ -158,4 +157,5 @@
     <p>DELANI STUDIO<br>
     2019</p>
 </footer>
+</div>
 </html>
